@@ -109,11 +109,19 @@ ATTR_SESSION_ID = "_session_id_"
 ATTR_TLS = "tls"
 ATTR_TYPE = "type"
 ATTR_SUBTYPE = "subtype"
-ATTR_UNIT = "unit"
 ATTR_USERNAME = "username"
 ATTR_VALUE = "value"
 ATTR_VALUE_KEY = "valueKey"
 ATTR_VERIFY_TLS = "verify_tls"
+
+SYSVAR_IS_INTERNAL = "isInternal"
+SYSVAR_MAX_VALUE = "maxValue"
+SYSVAR_MIN_VALUE = "minValue"
+SYSVAR_NAME = "name"
+SYSVAR_TYPE = "type"
+SYSVAR_UNIT = "unit"
+SYSVAR_VALUE = "value"
+SYSVAR_VALUE_LIST = "valueList"
 
 ATTR_HM_ALARM = "ALARM"
 ATTR_HM_ADDRESS = "ADDRESS"
